--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
     </div>
 </body>
 <footer>
-    <button> Unselect and show all </button>
-    <button> Hide selected </button>
-    <button> Cancel action </button>
+    <button id="Show"> Unselect and show all </button>
+    <button id="Hide"> Hide selected </button>
+    <button id="Cancel"> Cancel action </button>
 </footer>
 <script src="script.js"></script>
+
 </html>
