--- a/index.html
+++ b/index.html
@@ -1,117 +1,115 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Computer Science degree, 3rd course</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="title">
-        <h1>Computer Science degree, 3rd course</h1>
+      <h1>Computer Science degree, 3rd course</h1>
     </div>
     <div class="general">
-        <div class="navigators">
-            <div class="navigator">
-                <button> Human-machine interface </button>
-                <button> ICT Lab </button>
-                <button> Operating Systems </button>
-                <button> Proyect Management </button>
-                <button> Software Engineering </button>
-                <button> Web Engineering </button>
-            </div>
+      <div class="navigators">
+        <div class="navigator">
+          <button class="subject" id="hmi">Human-machine interface</button>
+          <button class="subject" id="ict">ICT Lab</button>
+          <button class="subject" id="os">Operating Systems</button>
+          <button class="subject" id="pm">Proyect Management</button>
+          <button class="subject" id="se">Software Engineering</button>
+          <button class="subject" id="web">Web Engineering</button>
         </div>
-        <div class="cards">
-            <div class="card">
-                <div class="cardbody">
-                    <div class="cardTitle">
-                        <h2> Human-machine interface </h2>
-                        <img src="img/hmi.jpg">
-                    </div>
-                    <div class="cardContent1 cardText"> <span> 4.5 credits </span> </div>
-                    <div class="cardContent2 cardText"> <span> 1st semester </span> </div>
-                    <div class="cardFooter cardText">
-                        <li> Xavier Valencia </li>
-                        <li> Dani Reguera </li>
-                    </div>
-                </div>
+      </div>
+      <div class="cards">
+        <div class="card" id="card_hmi">
+          <div class="cardbody">
+            <div class="cardTitle">
+              <h2>Human-machine interface</h2>
+              <img src="img/hmi.jpg" />
             </div>
-            <div class="card">
-                <div class="cardbody">
-                    <div class="cardTitle">
-                        <h2> ICT Lab </h2>
-                        <img src="img/ict.jpg">
-                    </div>
-                    <div class="cardContent1 cardText"> <span> 4.5 credits </span> </div>
-                    <div class="cardContent2 cardText"> <span> 1st semester </span></div>
-                    <div class="cardFooter cardText">
-                        <li> Xavier Valencia </li>
-                        <li> Dani Reguera </li>
-                    </div>
-                </div>
+            <div class="cardContent1 cardText"><span> 4.5 credits </span></div>
+            <div class="cardContent2 cardText"><span> 1st semester </span></div>
+            <div class="cardFooter cardText">
+              <li>Xavier Valencia</li>
+              <li>Dani Reguera</li>
             </div>
-            <div class="card">
-                <div class="cardbody">
-                    <div class="cardTitle">
-                        <h2> Operating Systems </h2>
-                        <img src="img/os.jpg">
-                    </div>
-                    <div class="cardContent1 cardText"> <span> 6 credits </span> </div>
-                    <div class="cardContent2 cardText"> <span> 1st semester </span></div>
-                    <div class="cardFooter cardText">
-                        <li> Txema Perez </li>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="cardbody">
-                    <div class="cardTitle">
-                        <h2> Proyect Management </h2>
-                        <img src="img/pm.jpg">
-                    </div>
-                    <div class="cardContent1 cardText"> <span> 4.5 credits </span> </div>
-                    <div class="cardContent2 cardText"> <span> 1st semester </span> </div>
-                    <div class="cardFooter cardText">
-                        <li> Eider Saralegui </li>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="cardbody">
-                    <div class="cardTitle">
-                        <h2> Software Engineering </h2>
-                        <img src="img/se.jpg">
-                    </div>
-                    <div class="cardContent1 cardText"> <span> 4.5 credits </span> </div>
-                    <div class="cardContent2 cardText"> <span> 1st semester </span></div>
-                    <div class="cardFooter cardText">
-                        <li> Iñigo Aldalur </li>
-                        <li> Aitor Arrieta </li>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="cardbody">
-                    <div class="cardTitle">
-                        <h2> Web Engineering I </h2>
-                        <img src="img/web.jpg">
-                    </div>
-                    <div class="cardContent1 cardText"> <span> 6 credits </span> </div>
-                    <div class="cardContent2 cardText"> <span> 1st semester </span> </div>
-                    <div class="cardFooter cardText">
-                        <li> Alain Perez </li>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="card" id="card_ict">
+          <div class="cardbody">
+            <div class="cardTitle">
+              <h2>ICT Lab</h2>
+              <img src="img/ict.jpg" />
+            </div>
+            <div class="cardContent1 cardText"><span> 4.5 credits </span></div>
+            <div class="cardContent2 cardText"><span> 1st semester </span></div>
+            <div class="cardFooter cardText">
+              <li>Xavier Valencia</li>
+              <li>Dani Reguera</li>
+            </div>
+          </div>
+        </div>
+        <div class="card" id="card_os">
+          <div class="cardbody">
+            <div class="cardTitle">
+              <h2>Operating Systems</h2>
+              <img src="img/os.jpg" />
+            </div>
+            <div class="cardContent1 cardText"><span> 6 credits </span></div>
+            <div class="cardContent2 cardText"><span> 1st semester </span></div>
+            <div class="cardFooter cardText">
+              <li>Txema Perez</li>
+            </div>
+          </div>
+        </div>
+        <div class="card" id="card_pm">
+          <div class="cardbody">
+            <div class="cardTitle">
+              <h2>Proyect Management</h2>
+              <img src="img/pm.jpg" />
+            </div>
+            <div class="cardContent1 cardText"><span> 4.5 credits </span></div>
+            <div class="cardContent2 cardText"><span> 1st semester </span></div>
+            <div class="cardFooter cardText">
+              <li>Eider Saralegui</li>
+            </div>
+          </div>
+        </div>
+        <div class="card" id="card_se">
+          <div class="cardbody">
+            <div class="cardTitle">
+              <h2>Software Engineering</h2>
+              <img src="img/se.jpg" />
+            </div>
+            <div class="cardContent1 cardText"><span> 4.5 credits </span></div>
+            <div class="cardContent2 cardText"><span> 1st semester </span></div>
+            <div class="cardFooter cardText">
+              <li>Iñigo Aldalur</li>
+              <li>Aitor Arrieta</li>
+            </div>
+          </div>
+        </div>
+        <div class="card" id="card_web">
+          <div class="cardbody">
+            <div class="cardTitle">
+              <h2>Web Engineering I</h2>
+              <img src="img/web.jpg" />
+            </div>
+            <div class="cardContent1 cardText"><span> 6 credits </span></div>
+            <div class="cardContent2 cardText"><span> 1st semester </span></div>
+            <div class="cardFooter cardText">
+              <li>Alain Perez</li>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-<footer>
-    <button id="Show"> Unselect and show all </button>
-    <button id="Hide"> Hide selected </button>
-    <button id="Cancel"> Cancel action </button>
-</footer>
-<script src="script.js"></script>
-
+  </body>
+  <footer>
+    <button id="Show">Unselect and show all</button>
+    <button id="Hide">Hide selected</button>
+    <button id="Cancel">Cancel action</button>
+  </footer>
+  <script src="js/base.js"></script>
 </html>
